objects/AcctSeed__Financial_Cube_Transaction__c.object
<CustomObject>
    <description>Used to document the relationship between a transaction record and a financial cube record.</description>
    <fields>
        <fullName>AcctSeed__Account__c</fullName>
        <formula>AcctSeed__Transaction__r.AcctSeed__Account__r.Name</formula>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Contact__c</fullName>
        <formula>AcctSeed__Transaction__r.AcctSeed__Contact__r.FirstName &amp; &quot; &quot; &amp; AcctSeed__Transaction__r.AcctSeed__Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Employee__c</fullName>
        <formula>AcctSeed__Transaction__r.AcctSeed__Employee__r.FirstName &amp; &quot; &quot; &amp;  AcctSeed__Transaction__r.AcctSeed__Employee__r.LastName</formula>
        <label>Employee</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Financial_Cube__c</fullName>
        <label>Financial Cube</label>
        <referenceTo>AcctSeed__Financial_Cube__c</referenceTo>
        <relationshipName>Financial_Cube_Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Product__c</fullName>
        <formula>AcctSeed__Transaction__r.AcctSeed__Product__r.Name</formula>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Project_Task__c</fullName>
        <formula>AcctSeed__Transaction__r.AcctSeed__Project_Task__r.Name</formula>
        <label>Project Task</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Project__c</fullName>
        <formula>AcctSeed__Transaction__r.AcctSeed__Project__r.Name</formula>
        <label>Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Source__c</fullName>
        <formula>IF(NOT(ISBLANK(AcctSeed__Transaction__r.AcctSeed__AP_Disbursement__c)), &quot;AP Disbursement&quot;,
IF(NOT(ISBLANK(AcctSeed__Transaction__r.AcctSeed__Billing_Cash_Receipt__c)), &quot;Billing Cash Receipt&quot;,
IF(NOT(ISBLANK(AcctSeed__Transaction__r.AcctSeed__Billing__c)), &quot;Billing&quot;,
IF(NOT(ISBLANK(AcctSeed__Transaction__r.AcctSeed__Billing_Line__c)), &quot;Billing Line&quot;,
IF(NOT(ISBLANK(AcctSeed__Transaction__r.AcctSeed__Account_Payable__c)), &quot;Payable&quot;,
IF(NOT(ISBLANK(AcctSeed__Transaction__r.AcctSeed__Account_Payable_Line__c)), &quot;Payable Line&quot;,
IF(NOT(ISBLANK(AcctSeed__Transaction__r.AcctSeed__Cash_Disbursement__c)), &quot;Cash Disbursement&quot;,
IF(NOT(ISBLANK(AcctSeed__Transaction__r.AcctSeed__Cash_Receipt__c)), &quot;Cash Receipt&quot;,
IF(NOT(ISBLANK(AcctSeed__Transaction__r.AcctSeed__Scheduled_Revenue_Expense__c)), &quot;Amortization Entry&quot;,
IF(NOT(ISBLANK(AcctSeed__Transaction__r.AcctSeed__Time_Card_Day__c)), &quot;Time Card&quot;,
IF(NOT(ISBLANK(AcctSeed__Transaction__r.AcctSeed__Journal_Entry_Line__c)), &quot;Journal Entry&quot;,
&quot;&quot;)))))))))))</formula>
        <label>Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Transaction__c</fullName>
        <label>Transaction</label>
        <referenceTo>AcctSeed__Transaction__c</referenceTo>
        <relationshipName>Financial_Cube_Transactions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Financial Cube Transaction</label>
    <nameField>
        <displayFormat>FCT-{00000}</displayFormat>
        <label>Financial Cube Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Cube Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>